# backtest-system

./: .gitignore  README.md  backtest.py  commission.py  execution.py  pyproject.toml  stats.py
strategies/: reversal.py
