[tool.poetry]
name = "bt"
version = "0.0.1"
description = ""
authors = ["d3an <jabury@sympatico.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.105"
pandas = "^1.3.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
